# tribunal-public

./: .gitignore  LICENSE  README.md  pyproject.toml  tribunal.py
examples/: e2e_demo.py  phase1_core_modes.py
personas/: andrej-karpathy.json  knowledge-analyst.json  security-auditor.json  systems-architect.json  ui-minimalist.json  ui-specialist.json  ux-operator-flow.json  ux-researcher.json  ux-specialist.json
report/: codex-trib-lib-matrix.csv  codex-trib-lib-tribunal.md
report/evidence/: agy-judge-critique.md  agy-judge-knowledge.md  agy-judge-ux.md  brief-closure-baseline.md  brief-closure-external-attempts.md  brief-closure-judge-critique.md  brief-closure-judge-knowledge.md  brief-closure-judge-packet.md  brief-closure-judge-ux.md  brief-live-baseline.md  brief-live-e2e.md  brief-live-external-attempts.md  brief-live-judge-critique.md  brief-live-judge-knowledge.md  brief-live-judge-packet.md  brief-live-judge-ux.md  brief-live-notebooklm.md  brief-live-oss.md  brief-live-synthesis.md  e2e-proof.md  final-live-2026-07-21-baseline.md  final-live-2026-07-21-e2e.md  final-live-2026-07-21-external-attempts.md  final-live-2026-07-21-judge-critique.md  final-live-2026-07-21-judge-knowledge.md  final-live-2026-07-21-judge-packet.md  final-live-2026-07-21-judge-ux.md  final-live-2026-07-21-notebooklm.md  final-live-2026-07-21-oss.md  final-live-2026-07-21-publication.md  final-live-2026-07-21-spec-reconciliation.md  final-live-2026-07-21-synthesis.md  (+57 more)
scripts/: csv_gate.py  report_gate.py  skill_gate.py
skill/: SKILL.md
tests/: test_tribunal.py
(+35 files in other folders)
