[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-tribunal"
version = "1.0.0"
description = "Dependency-free hard-critical multi-judge review contracts and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tribunal contributors" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.scripts]
tribunal = "tribunal:main"

[tool.setuptools]
py-modules = ["tribunal"]
packages = ["personas"]

[tool.setuptools.package-data]
personas = ["*.json"]
